myteo/test/analyze/type_check/record/nonexistent_field_error.exp
Error: Cannot resolve field or method with name `foo` on type `Rec`
test/analyze/type_check/record/nonexistent_field_error.myte:8:3
 8 |   (x.foo: Unit);
   |    ^

Error: Cannot resolve field or method with name `fiel` on type `Rec`
test/analyze/type_check/record/nonexistent_field_error.myte:9:3
 9 |   (x.fiel: Unit);
   |    ^

Error: Cannot resolve field or method with name `fieldd` on type `Rec`
test/analyze/type_check/record/nonexistent_field_error.myte:10:3
 10 |   (x.fieldd: Unit);
    |    ^